pkg/ibmvpc/examples/multiple_vpcs_all_vpcssubnetsBased_withPGW.txt
Connectivity for VPC ky-testenv-vpc
combined connections between subnets:
ky-testenv-edge-subnet-1 => Public Internet (all ranges) : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-1 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-1 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-1 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-edge-subnet-2 => Public Internet (all ranges) : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-2 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-2 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-2 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-edge-subnet-3 => Public Internet (all ranges) : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-3 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-3 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-3 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-private-subnet-1 => ky-testenv-edge-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-edge-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-edge-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-transit-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-transit-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-transit-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-edge-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-edge-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-edge-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-transit-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-transit-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-transit-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-edge-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-edge-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-edge-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-transit-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-transit-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-transit-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-2 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-2 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-2 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-3 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-3 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-3 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-transit-subnet-2 : All Connections

connections are stateful unless marked with *

Connectivity for VPC test-vpc-ky
combined connections between subnets:
sub1-1-ky => Public Internet 8.8.8.8/32 : protocol: UDP dst-ports: 53
sub1-1-ky => sub1-2-ky : protocol: TCP
sub1-1-ky => sub1-3-ky : protocol: TCP
sub1-1-ky => sub3-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0
sub1-2-ky => sub1-1-ky : protocol: TCP
sub1-2-ky => sub1-3-ky : protocol: TCP
sub1-3-ky => sub1-1-ky : protocol: TCP
sub1-3-ky => sub1-2-ky : protocol: TCP
sub2-1-ky => Public Internet 8.8.8.8/32 : protocol: UDP dst-ports: 53
sub2-1-ky => sub2-2-ky : All Connections
sub2-1-ky => sub3-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0; protocol: TCP src-ports: 443
sub2-2-ky => sub2-1-ky : All Connections
sub3-1-ky => sub1-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0
sub3-1-ky => sub2-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0; protocol: TCP dst-ports: 443

connections are stateful unless marked with *
